Refactor CORS configuration to use environment variable for allowed origins